# KomoringHeights

./: .commit-msg.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  README.en.md  README.md
.github/ISSUE_TEMPLATE/: ---------bug-report.md  -------feature-request.md
.github/workflows/: ct.yml  deploy-docs.yml  make-mac.yml  make-mingw.yml  make-msys2.yml  make.yml  ndk.yml  pre-commit.yml  release.yml
docs/: EngineOptions.txt
jni/: Android.mk
script/: android_build.sh  build.sh  mate.go  mingw_gcc.sh  msys2_build.ps1  msys2_build.sh  msys2_build32.sh
source/: Makefile  YaneuraOu.vcxproj  YaneuraOu.vcxproj.filters  config.h  misc.cpp  position.cpp  position.h  types.h  usi.cpp  usi_option.cpp
source/engine/user-engine/: .clang-format  .clang-tidy  CPPLINT.cfg  bitset.hpp  board_key_hand_pair.hpp  cc.hpp  children_board_key.hpp  children_cache.cpp  children_cache.hpp  circular_array.hpp  deep_dfpn.cpp  deep_dfpn.hpp  delayed_move_list.hpp  double_count_elimination.hpp  dummy_engine.cpp  engine_option.cpp  engine_option.hpp  expansion_stack.hpp  fixed_size_stack.hpp  hands.cpp  hands.hpp  initial_estimation.cpp  initial_estimation.hpp  komoring_heights.cpp  komoring_heights.hpp  leaf_search.cpp  leaf_search.hpp  local_expansion.hpp  mate_len.hpp  move_picker.hpp  move_selector.cpp  move_selector.hpp  multi_pv.hpp  new_cc.hpp  new_kh.cpp  new_kh.hpp  new_ttentry.hpp  node.hpp  node_history.cpp  node_history.hpp  (+40 more)
source/engine/user-engine/benchmark/: CMakeLists.txt  common_benchmark.cpp  local_expansion_benchmark.cpp  main.cpp  node_benchmark.cpp  overall_benchmark.cpp  repetition_table_benchmark.cpp  visit_history_benchmark.cpp
source/engine/user-engine/docs/: ReleaseNote.md  (+2 more)
source/extra/: bitop.h  macros.h
source/mate/: mate1ply_without_effect.cpp  mate_move_picker.h
tools/: extract_comments.py
(+50 files in other folders)
